--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-
-Sphinx                             
+Sphinx==4.0.1                             
 sphinx-markdown-tables==0.0.17
 sphinx-rtd-theme==0.5.2
 sphinxcontrib-applehelp==1.0.2
